fix(structure): shared component footer and header aligned

--- a/frontend/src/app/shared/components/footer/footer.component.scss
+++ b/frontend/src/app/shared/components/footer/footer.component.scss
@@ -7,11 +7,13 @@
   bottom: 0;
   width: 100%;
   font-size: 12px;
+  z-index: 100;
 }
 
 .footer-content {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .footer p {
